Fix flex wrap and position of links in header

--- a/styles.css
+++ b/styles.css
@@ -90,8 +90,7 @@ h3{
     align-items: center; 
     gap: 780px;   
     margin-right: 210px;  
-    position: relative; 
-    flex-wrap: wrap;
+    
    
 }  
 
